syntax = "proto3";
package model;
option go_package = "../model";

message Message {
  int64 msg_id = 1;
  int64 seq_id = 2;
  int64 msg_type = 3;
  string content = 4;
  int64 from_type = 5;
  string from_id = 6;
  string from_device = 7;
  string from_tenant_id = 8;
  int64 to_type = 9;
  string to_id = 10;
  string to_device = 11;
  string to_tenant_id = 12;
  int64 send_time = 13;
  string user_id = 14;
  string tenant_id = 15;
}